[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "urban-canvas"
version = "0.1.0"
authors = [
  { name="Dominick Ryan", email="tja_dryan@outlook.com" },
]
description = "A project to analyze urban development using satellite imagery."
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "geopandas",
  "matplotlib",
  "seaborn",
  "scikit-learn",
  "rasterio",
  "torch",
  "torchvision",
  "jupyter",
]